# pycrdt

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  environment-dev.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml  test.yml  tests.yml
api_reference/: index.html
docs/: api_reference.md  index.md  install.md  usage.md
install/: index.html
python/pycrdt/: __init__.py  _array.py  _awareness.py  _base.py  _doc.py  _map.py  _pycrdt.pyi  _sync.py  _text.py  _transaction.py  _undo.py  _update.py  _version.py  _xml.py  array.py  base.py  base_type.py  doc.py  map.py  text.py  transaction.py
search/: search_index.json
src/: array.rs  doc.rs  lib.rs  map.rs  subscription.rs  text.rs  transaction.rs  type_conversions.rs  undo.rs  update.rs  updates.rs  xml.rs
tests/: conftest.py  test_array.py  test_awareness.py  test_doc.py  test_map.py  test_memory.py  test_model.py  test_sync.py  test_text.py  test_threads.py  test_transaction.py  test_typed.py  test_types.py  test_undo.py  test_update.py  test_xml.py  test_ypy.py
usage/: index.html
